# PLANT-DISEASE-EARLY-DIAGNOSIS-SYSTEM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  evaluate.py  export.py  inference.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
configs/: config.yaml
mobile/: .gitignore  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml  test_tflite.dart
mobile/android/app/: build.gradle.kts
mobile/assets/data/: diseases_en.json  diseases_tr.json
mobile/ios/Runner/: Info.plist
mobile/lib/: main.dart
mobile/lib/config/: routes.dart  theme.dart
mobile/lib/core/constants/: app_assets.dart  app_colors.dart  app_dimensions.dart  layout_constants.dart
mobile/lib/core/di/: service_locator.dart
mobile/lib/core/errors/: app_exceptions.dart  error_handler.dart
mobile/lib/core/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_tr.dart  app_tr.arb
mobile/lib/core/utils/: disease_label_mapper.dart
mobile/lib/core/widgets/: circular_back_button.dart  circular_icon_button.dart
mobile/lib/data/data_sources/: library_data_source.dart
mobile/lib/data/models/: disease_detail_model.dart  disease_model.dart  history_filter_model.dart  scan_history_model.dart
mobile/test/: widget_test.dart
mobile/test/core/: app_colors_test.dart  error_handler_test.dart
mobile/test/data/: models_test.dart
mobile/test/utils/: disease_label_mapper_test.dart
scripts/: prepare_data.py
src/analysis/: evaluator.py  visualizer.py
src/core/: config.py  paths.py
src/data/: loader.py
src/modeling/: net.py  trainer.py
tests/: check_data_integrity.py  conftest.py  test_data_loader.py  test_inference.py
(+19 files in other folders)
